college id and password added

--- a/job_portal/portal/templates/college_register.html
+++ b/job_portal/portal/templates/college_register.html
@@ -42,6 +42,13 @@
             <label for="id_college_description">Description</label>
             <textarea name="college_description" id="id_college_description" rows="4"></textarea>
 
+            <label for="college_registration_id">Registration ID:</label>
+            <input type="text" name="college_registration_id" id="college_registration_id" required>
+            
+            <label for="college_registration_password">Registration Password:</label>
+            <input type="password" name="college_registration_password" id="college_registration_password" required>
+            
+
             <button type="submit">Register</button>
         </form>
     </div>
