--- a/job_portal/portal/templates/college_login.html
+++ b/job_portal/portal/templates/college_login.html
@@ -14,5 +14,11 @@
         <input type="password" name="college_registration_password" id="college_registration_password" required><br><br>
         <button type="submit">Login</button>
     </form>
+
+    {% if popup_message %}
+    <script>
+        alert("{{ popup_message }}");
+    </script>
+    {% endif %}
 </body>
 </html>
