--- a/job_portal/portal/templates/company_login.html
+++ b/job_portal/portal/templates/company_login.html
@@ -1,22 +1,26 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
     <title>Company Login</title>
+    <link rel="stylesheet" href="{% static 'portal/company_login.css' %}">
 </head>
 <body>
-    <h2>Company Login</h2>
-    {% if popup_message %}
-    <script>
-        alert("{{ popup_message }}");
-    </script>
-    {% endif %}
-    <form method="post">
-        {% csrf_token %}
-        <label>Registration ID:</label>
-        <input type="text" name="company_registration_id" required><br>
-        <label>Password:</label>
-        <input type="password" name="company_registration_password" required><br>
-        <button type="submit">Login</button>
-    </form>
+    <div class="company-login-container">
+        <h2>Company Login</h2>
+        {% if popup_message %}
+        <script>
+            alert("{{ popup_message }}");
+        </script>
+        {% endif %}
+        <form method="post">
+            {% csrf_token %}
+            <label for="company_registration_id">Registration ID:</label>
+            <input type="text" name="company_registration_id" id="company_registration_id" required>
+            <label for="company_registration_password">Password:</label>
+            <input type="password" name="company_registration_password" id="company_registration_password" required>
+            <button type="submit">Login</button>
+        </form>
+    </div>
 </body>
 </html>
