addes college list

--- a/job_portal/portal/templates/index.html
+++ b/job_portal/portal/templates/index.html
@@ -14,8 +14,8 @@
     </header>
     <nav>
         <a href="#">Home</a>
-        <a href="#">Jobs</a>
         <a href="#">Companies</a>
+        <a href="college_list">Colleges</a>
         <div class="nav-dropdown">
             <a href="#">Login &#9662;</a>
             <div class="dropdown-login">
@@ -61,10 +61,7 @@
                 <h3>For Job Seekers</h3>
                 <p>Browse jobs, upload your resume, and apply to positions that match your skills.</p>
             </div>
-            <div class="feature">
-                <h3>For Employers</h3>
-                <p>Post job openings, review applications, and find the best candidates for your company.</p>
-            </div>
+            
             <div class="feature">
                 <h3>Career Resources</h3>
                 <p>Get tips on resume writing, interview preparation, and career growth from experts.</p>
