--- a/job_portal/portal/templates/index.html
+++ b/job_portal/portal/templates/index.html
@@ -14,7 +14,7 @@
     </header>
     <nav>
         <a href="#">Home</a>
-        <a href="#">Companies</a>
+        <a href="company_list">Companies</a>
         <a href="college_list">Colleges</a>
         <div class="nav-dropdown">
             <a href="#">Login &#9662;</a>
