--- a/job_portal/portal/templates/index.html
+++ b/job_portal/portal/templates/index.html
@@ -4,11 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <title>GetPlaced - Job Portal</title>
+    <link rel="icon" href="{% static 'logo1.png' %}">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="{% static 'portal/style.css' %}">
 </head>
 <body>
     <header>
+        <div class="headLogo">
+            <img src="{% static 'logo1.png' %}">
+        </div>
         <h1>GetPlaced</h1>
         <p>Your Gateway to Dream Jobs</p>
     </header>
