--- a/job_portal/portal/templates/index.html
+++ b/job_portal/portal/templates/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>GetPlaced - Job Portal</title>
-    <link rel="icon" href="{% static 'media/logo1.png' %}">
+    <link rel="icon" href="{% static 'logo2.png' %}">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="{% static 'portal/style.css' %}">
 </head>
