--- a/job_portal/portal/templates/index.html
+++ b/job_portal/portal/templates/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>GetPlaced - Job Portal</title>
-    <link rel="icon" href="{% static 'logo2.png' %}">
+    <link rel="icon" href="{% static 'menuLogo.png' %}">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="{% static 'portal/style.css' %}">
 </head>
@@ -19,7 +19,7 @@
     </div>
     <header>
         <div class="headLogo">
-            <img src="{% static 'logo1.png' %}" alt="Logo" class="circle-logo">
+            <img src="{% static 'logo4.png' %}" alt="Logo" class="circle-logo">
         </div>
         <h1 class="section-title">GetPlaced</h1>
         <p class="subtitle">Your Gateway to Dream Jobs</p>
