--- a/job_portal/portal/templates/index.html
+++ b/job_portal/portal/templates/index.html
@@ -9,6 +9,19 @@
     <link rel="stylesheet" href="{% static 'portal/style.css' %}">
 </head>
 <body>
+    <!--Animted floating rocket-->
+    <div class="rocket-bg">
+    <img src="{% static 'rockett.png' %}" class="rocket rocket-1">
+    <img src="{% static 'rockett.png' %}" class="rocket rocket-2">
+    <img src="{% static 'rockett.png' %}" class="rocket rocket-3">
+</div>
+
+
+
+
+
+
+
     <!-- Animated floating shapes background -->
     <div class="bg-shapes">
         <div class="bg-shape blue"></div>
