testing git hub

--- a/job_portal/portal/templates/index.html
+++ b/job_portal/portal/templates/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="{% static 'portal/style.css' %}">
 </head>
 <body>
+    <div class="changes">
+        <!--git hub changes-->
+    </div>
     <!--Animted floating rocket-->
     <div class="rocket-bg">
     <img src="{% static 'rockett.png' %}" class="rocket rocket-1">
